QA-3388-whats covered back-ground-color-fix

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1611,8 +1611,8 @@ input#pan {
 
 
 .what-is-covered {
-  background: #EEEEEE;
-  color: #161A2E;
+  background: #4F2DA7;
+  color: #FFFFFF;
   padding: 10px 10px 10px 0;
   border-radius: 4px;
   margin: 10px 0 0 0;
